Fix logviewer crash with multiple conversations per date

This situation commonly occurs when conversations from multiple accounts
were held on a single day.

REVIEW: 113289
BUG: 325957